# logistics-webapp

./: README.md
atlan_backend/: API.md  (+9 more)
logistics_backend/: .gitignore  API.md  Dockerfile  WEBSOCKETS.md  docker-compose.yml  nginx.conf  pyproject.toml  redis.conf  start.sh
logistics_backend/authentication/: models.py  serializers.py  views.py
logistics_backend/authentication/migrations/: 0001_initial.py  0004_alter_driver_current_latitude_and_more.py
logistics_backend/booking/: models.py  serializers.py  signals.py  tasks.py  urls.py  views.py
logistics_backend/booking/migrations/: 0001_initial.py  0004_alter_booking_user.py  (+1 more)
logistics_backend/docker-compose-config/: nginx.conf
logistics_backend/driver/: consumers.py  helpers.py  models.py  routing.py  serializers.py  tasks.py  urls.py  views.py
logistics_backend/fleet_owner/: apps.py  mixins.py  models.py  serializers.py  urls.py  views.py
logistics_backend/kompose-config/: celery-deployment.yaml  db-deployment.yaml  env-configmap.yaml  nginx-cm0-configmap.yaml  nginx-deployment.yaml
logistics_backend/logistics_backend/: asgi.py  celery.py  routing.py  settings.py  urls.py  wsgi.py
logistics_backend/pricing_model/: apps.py  models.py
logistics_backend/regular_user/: apps.py  consumers.py  routing.py  serializers.py  urls.py  views.py
logistics_backend/utils/: custom_exception_handler.py  custom_jwt_auth.py  custom_jwt_gen.py  driver_middleware.py  exceptions.py  google_endpoints.py  helpers.py  regular_user_middleware.py
logistics_backend/vehicle_type/: apps.py  models.py  urls.py  views.py
(+90 files in other folders)
