[tool.poetry]
name = "logistics-backend"
version = "0.1.0"
description = ""
authors = ["HistoriFy <rathorehotandcool2002@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
celery = "^5.4.0"
certifi = "^2024.8.30"
channels = "^4.1.0"
dj-database-url = "^2.2.0"
dj-rest-auth = "^6.0.0"
Django = "^5.1.2"
django-after-response = "^0.2.2"
django-cors-headers = "^4.5.0"
djangorestframework = "^3.15.2"
djangorestframework-simplejwt = "^5.3.1"
pipenv = "^2024.1.0"
PyJWT = "^2.9.0"
python-dotenv = "^1.0.1"
redis = "^5.1.1"
uvicorn = "^0.32.0"
websockets = "^13.1"
gunicorn = "^23.0.0"
psycopg = "^3.2.2"
psycopg-binary = "^3.2.2"
sqlparse = "^0.5.1"
requests = "^2.32.3"
channels-redis = "^4.2.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"